# ng-p

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  TODO  UPDATES  aclocal.m4  configure  configure.ac  configure.in  cvs2cl.pl  mkinstalldirs
db/: .cvsignore  .gitignore  Makefile.am  Makefile.in  gnuworldDB.cc  gnuworldDB.h  pgsqlDB.cc  pgsqlDB.h
doc/: ccontrol.addme.sql  ccontrol.commands.sql  ccontrol.help.sql  ccontrol.sql  ccontrol.update.sql  cservice.addme.sql  cservice.sql  cservice.web.sql
doxygen/: gnuworld.conf
include/: Channel.h  ChannelUser.h  Gline.h  LoadClientTimerHandler.h  Network.h  Numeric.h  ServerCommandHandler.h  ServerTimerHandlers.h  TimerHandler.h  UnloadClientTimerHandler.h  client.h  config.h  defs.h  defs.h.in  events.h  iClient.h  iServer.h  ip.h  moduleLoader.h  server.h
lib/: .cvsignore  .gitignore  Buffer.cc  Buffer.h  ClientSocket.cc  ClientSocket.h  Connection.cc  Connection.h  ConnectionHandler.cc  ConnectionHandler.h  ConnectionManager.cc  ConnectionManager.h  EConfig.cc  EConfig.h  ELog.cc  ELog.h  FileSocket.cc  FileSocket.h  Makefile.am  Makefile.in  Socket.cc  Socket.h  StringTokenizer.cc  StringTokenizer.h  ircd_chattr.h  match.cc  match.h  md5hash.cc  md5hash.h  misc.cc  misc.h  xparameters.h
libircu/: .gitignore  Makefile.am  Makefile.in  msg_AD.cc  msg_B.cc  msg_C.cc  msg_D.cc  msg_DS.cc  msg_EA.cc  msg_I.cc  msg_L.cc  msg_M351.cc  msg_N.cc  msg_NOOP.cc  msg_P.cc  msg_PASS.cc  msg_Server.cc  msg_W.cc  msg_WA.cc
libltdl/: .cvsignore  .gitignore  Makefile.in  configure
mod.cservice/: .cvsignore  .gitignore  ACCESSCommand.cc  ADDUSERCommand.cc  ADMINCMDSCommand.cc  BANCommand.cc  BANLISTCommand.cc  CHANINFOCommand.cc  CHINFOCommand.cc  CLEARMODECommand.cc  COMMENTCommand.cc  CONFIGCommand.cc  ChangeLog  DEBUGCommand.cc  DEOPCommand.cc  DEVOICECommand.cc  FORCECommand.cc  GETLEVELCommand.cc  GLOBALNOTICECommand.cc  GLOBNOTICECommand.cc  GSUSPENDCommand.cc  GUNSUSPENDCommand.cc  HELPCommand.cc  INVITECommand.cc  INVMECommand.cc  ISREGCommand.cc  JOINCommand.cc  KICKCommand.cc  LBANLISTCommand.cc  LOGINCommand.cc  MODECommand.cc  MODINFOCommand.cc  MOTDCommand.cc  Makefile.am  Makefile.in  NEWPASSCommand.cc  NOTECommand.cc  OFFICIALCommand.cc  OPCommand.cc  OPERJOINCommand.cc  (+67 more)
mod.nickserv/: .cvsignore  JUPECommand.cc  LOGINCommand.cc  Makefile.am  Makefile.in  RECOVERCommand.cc  RELEASECommand.cc  SAYCommand.cc  STATSCommand.cc  TODO  constants.h  juUser.cc  juUser.h  levels.h  nickserv.cc  nickserv.h  nickservClass.h  nickservCommands.cc  nickservCommands.h  nsUser.cc  nsUser.h  sqlnsUser.cc  sqlnsUser.h
src/: .cvsignore  .gitignore  Channel.cc  ChannelUser.cc  LoadClientTimerHandler.cc  Makefile.am  Makefile.in  Network.cc  ServerTimerHandlers.cc  UnloadClientTimerHandler.cc  client.cc  iClient.cc  iServer.cc  ip.cc  main.cc  msg_AC.cc  msg_AD.cc  msg_B.cc  msg_C.cc  msg_CM.cc  msg_D.cc  msg_DS.cc  msg_EA.cc  msg_EB.cc  msg_Error.cc  msg_G.cc  msg_GL.cc  msg_I.cc  msg_J.cc  msg_JU.cc  msg_K.cc  msg_L.cc  msg_M.cc  msg_M351.cc  msg_N.cc  msg_NOOP.cc  msg_P.cc  msg_PART.cc  msg_PASS.cc  msg_PRIVMSG.cc  (+10 more)
