## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = libgnuworld.la
libgnuworld_la_SOURCES = Buffer.cc \
	Connection.cc \
	ConnectionHandler.cc \
	ConnectionManager.cc \
	ClientSocket.cc \
	EConfig.cc \
	ELog.cc \
	FileSocket.cc \
	Socket.cc \
	StringTokenizer.cc \
	match.cc \
	md5hash.cc \
	misc.cc
libgnuworld_la_LDFLAGS = -static
